<resources>
    <string name="AFX_DISABLED">Disabled</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_about">@string/app_about_title</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_help">@string/profiles_settings_help_title</string>
    <string name="action_license">Open source license</string>
    <string name="action_reset">Reset</string>
    <string name="action_settings">@string/app_settings_title</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_about_title">About</string>
    <string name="app_bar_main_screen_subtitle" />
    <string name="app_bar_main_screen_title">@string/app_name_ds1</string>
    <string name="app_name">library</string>
    <string name="app_name_ds1">Dolby Atmos</string>
    <string name="app_name_quicksettings">@string/app_name_ds1</string>
    <string name="app_settings_title">Saved audio settings</string>
    <string name="app_version" formatted="false">%1s: version %2s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_enhancement_summary">"Turn on Dolby Atmos game audio enhancements while you're gaming"</string>
    <string name="audio_enhancement_title">Audio enhancements</string>
    <string name="bass">Bass</string>
    <string name="bass_boost">Bass boost</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_sheet_settings_button_gotit">Not now</string>
    <string name="bottom_sheet_settings_button_settings">Set up</string>
    <string name="bottom_sheet_text">There are no saved settings for this device, so smart audio effects are enabled. You can customize the audio for this device in Dolby Audio settings.</string>
    <string name="bottom_sheet_title">New device connected</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brilliant_treble">Brilliant treble</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="connected_device_bluetooth_label">Bluetooth device</string>
    <string name="connected_device_label">Connected device</string>
    <string name="connected_device_usb_label">USB device</string>
    <string name="connected_device_wired_label">Wired</string>
    <string name="custom">Custom</string>
    <string name="dolby_custom_profile">Advanced settings for your connected device</string>
    <string name="dolby_dynamic_profile">Smart Audio identifies the content and performs automatic adjustments to deliver the best sound</string>
    <string name="dolby_game_profile">Surround sound and clearer dialog for an immersive game experience</string>
    <string name="dolby_loading">Loading...</string>
    <string name="dolby_movie_profile">Authentic surround sound and clearer dialogue for the full impact of movies and TV shows</string>
    <string name="dolby_music_profile">Rich, detailed audio that delivers every note and beat with power you can feel</string>
    <string name="dolby_status_off_label">Off</string>
    <string name="dolby_status_on_label">On</string>
    <string name="dolby_voice_profile">Boost dialog for better speech clarity</string>
    <string name="dynamic">Smart audio</string>
    <string name="err_unable_to_load_license">"Unable to load license.
Error: %s"</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="flat_geq">Flat</string>
    <string name="focused">Focused</string>
    <string name="fragprofile_header_device_reset_description">Reset device settings</string>
    <string name="game">Game</string>
    <string name="graphic_equalizer">Graphic equalizer</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="ieq_text">Intelligent equalizer</string>
    <string name="info_screen_message_mono">"Dolby Atmos delivers a premium listening experience through your phone's loudspeaker and connected devices. This feature is always on when you're listening through the loudspeaker, and you can adjust the settings for headphones and connected speakers.

To disable this feature when you’re listening through the loudspeaker, tap the screen 3 times."</string>
    <string name="info_screen_message_stereo">"Dolby Atmos delivers a premium listening experience through your phone's loudspeakers and connected devices. This feature is always on when you're listening through the loudspeakers, and you can adjust the settings for headphones and connected speakers.

To disable this feature when you’re listening through the loudspeakers, tap the screen 3 times."</string>
    <string name="item_view_role_description">Tab</string>
    <string name="license_body_file">licenses.html</string>
    <string name="license_uri">file:///android_asset/licenses.html</string>
    <string name="loudspeaker_label">Loudspeaker</string>
    <string name="loudspeakers_label">Loudspeakers</string>
    <string name="main_screen_tutorial_confirmation">Continue</string>
    <string name="main_screen_tutorial_license">Open source license</string>
    <string name="main_screen_tutorial_message_2">"Smart audio identifies the content you're listening to and makes adjustments for optimal sound. Whether you're streaming a movie, listening to music, or playing a game, Dolby technology gives you clearer dialog, crisper detail, and more engaging sound."</string>
    <string name="main_screen_tutorial_message_mono">"Dolby Atmos delivers a premium listening experience through your phone's loudspeaker and connected devices. This feature is always on when you're listening through the loudspeaker, and you can adjust the settings for headphones and connected speakers."</string>
    <string name="main_screen_tutorial_message_stereo">"Dolby Atmos delivers a premium listening experience through your phone's loudspeakers and connected devices. This feature is always on when you're listening through the loudspeakers, and you can adjust the settings for headphones and connected speakers."</string>
    <string name="main_screen_tutorial_next">Next</string>
    <string name="main_screen_tutorial_title_1">Welcome to Dolby Atmos</string>
    <string name="main_screen_tutorial_title_2">Smart adjustments</string>
    <string name="mainscreen_dolby_disabled_picture_talkback_message">Dolby Atmos has been disabled when connected to unsupported audio devices.</string>
    <string name="mainscreen_dolby_disabled_text">Dolby Atmos doesn’t work with devices connected by an auxiliary cable.</string>
    <string name="mainscreen_dolby_disabled_text_ready_for">You have set audio channel on external display. To use Dolby Atmos, set the audio channel to phone speaker or audio device.</string>
    <string name="mainscreen_dolby_disabled_title">Device not supported</string>
    <string name="manual">Manual</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="max_edit_gain">3</string>
    <string name="surround_virtualizer">Surround virtualizer</string>
    <string name="surround_virtualizer_description">Create a surround sound experience through your connected device</string>
    <string name="volume_leveler">Volume leveler</string>
    <string name="volume_leveler_description">Hear the same volume level for each audio source</string>
    <string name="welcome_whats_new_text">You can create custom profiles for Bluetooth and USB-C audio devices. Each time you connect a device, Dolby Atmos will remember the last settings you used.</string>
    <string name="welcome_whats_new_title">"What's new"</string>
</resources>