<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/dolbyBlockedLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/dolbyDisabledScreenPictureContainer" android:paddingTop="@dimen/mainscreen_dolby_disabled_title_padding_top" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/dolby_disabled_aux_line" android:layout_marginStart="@dimen/mainscreen_dolby_disabled_text_padding_lateral" android:layout_marginEnd="@dimen/mainscreen_dolby_disabled_text_padding_lateral" app:flow_horizontalAlign="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <com.airbnb.lottie.LottieAnimationView android:id="@id/dolbyDisabledAnimationAuxLine" android:background="@color/colorMainBackground" android:layout_width="fill_parent" android:src="@drawable/dolby_disabled_aux_line" android:contentDescription="@string/mainscreen_dolby_disabled_picture_talkback_message" app:lottie_rawRes="@raw/moto_dolby_disabled" style="@style/TutorialLottieAnimations" />
        <ImageView android:id="@id/dolbyDisabledScreenCastImage" android:background="@color/colorMainBackground" android:visibility="gone" android:layout_width="fill_parent" android:src="@drawable/dolby_disable_screen_cast_image" android:scaleType="fitStart" android:contentDescription="@string/mainscreen_dolby_disabled_picture_talkback_message" style="@style/dolbyDisabledScreenCastImage" />
    </FrameLayout>
    <TextView android:textSize="@dimen/mainscreen_dolby_disabled_title_size" android:textColor="@color/mainscreen_dolby_disabled_title_color" android:id="@id/mainscreen_dolby_disabled_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mainscreen_dolby_disabled_title_padding_top" android:text="@string/mainscreen_dolby_disabled_title" android:layout_marginStart="@dimen/mainscreen_dolby_disabled_text_padding_lateral" android:layout_marginEnd="@dimen/mainscreen_dolby_disabled_text_padding_lateral" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dolbyDisabledScreenPictureContainer" style="@style/MainScreenDisabledText" />
    <TextView android:textSize="@dimen/mainscreen_dolby_disabled_text_size" android:textColor="@color/mainscreen_dolby_disabled_text_color" android:id="@id/mainscreen_dolby_disabled_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mainscreen_dolby_disabled_subtitle_padding_top" android:text="@string/mainscreen_dolby_disabled_text" android:lineSpacingExtra="@dimen/mainscreen_dolby_disabled_subtitle_line_spacing_extra" android:layout_marginStart="@dimen/mainscreen_dolby_disabled_text_padding_lateral" android:layout_marginEnd="@dimen/mainscreen_dolby_disabled_text_padding_lateral" app:layout_constraintStart_toStartOf="@id/mainscreen_dolby_disabled_title" app:layout_constraintTop_toBottomOf="@id/mainscreen_dolby_disabled_title" style="@style/MainScreenDisabledText" />
</androidx.constraintlayout.widget.ConstraintLayout>