<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/profile_settings_fragment" android:tag="layout/profile_settings_fragment_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView android:id="@id/nestedScrollView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="true" app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <TextView android:id="@id/ieqText" android:visibility="gone" android:text="@string/ieq_text" app:layout_constraintBottom_toTopOf="@id/ieqCarousel" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="spread_inside" style="@style/SettingsItemText" />
            <com.motorola.dolby.dolbyui.ui.custom.TabView android:id="@id/ieqCarousel" android:tag="binding_1" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="40.0dip" app:layout_constraintEnd_toEndOf="@id/guidelineRight" app:layout_constraintStart_toEndOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/ieqText" app:tabButtonStyle="true" />
            <TextView android:id="@id/geqText" android:text="@string/graphic_equalizer" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/ieqCarousel" style="@style/SettingsItemText" />
            <com.motorola.dolby.dolbyui.ui.custom.GeqView android:id="@id/geqView" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@id/guidelineRight" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/geqText" />
            <com.motorola.dolby.dolbyui.ui.custom.TabView android:id="@id/geqCarousel" android:tag="binding_3" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_marginTop="16.0dip" app:layout_constraintEnd_toStartOf="@id/guidelineRight" app:layout_constraintStart_toEndOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/geqView" />
            <View android:id="@id/eqDivider" app:layout_constraintEnd_toStartOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/geqCarousel" style="@style/geqCarouselShadow" />
            <TextView android:id="@id/svTextView" android:tag="binding_4" android:text="@string/surround_virtualizer" android:singleLine="true" android:textAlignment="viewStart" app:layout_constraintEnd_toStartOf="@id/svButton" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/eqDivider" style="@style/SettingsItemTitleText" />
            <TextView android:id="@id/svTextViewDescription" android:tag="binding_5" android:text="@string/surround_virtualizer_description" app:layout_constraintEnd_toStartOf="@id/svButton" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/svTextView" style="@style/SettingsItemDescriptionText" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/svButton" android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/svTextViewDescription" app:layout_constraintEnd_toEndOf="@id/guidelineRight" app:layout_constraintTop_toTopOf="@id/svTextView" style="@style/EQSettingsSwitch" />
            <View android:id="@id/svDivider" android:tag="binding_7" app:layout_constraintEnd_toStartOf="@id/guidelineRight" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/svTextViewDescription" style="@style/HorizontalLine" />
            <TextView android:id="@id/vlTextView" android:text="@string/volume_leveler" app:layout_constraintEnd_toStartOf="@id/vlButton" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/svDivider" style="@style/SettingsItemTitleText" />
            <TextView android:id="@id/vlTextViewDescription" android:text="@string/volume_leveler_description" app:layout_constraintEnd_toStartOf="@id/vlButton" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/vlTextView" style="@style/SettingsItemDescriptionText" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/vlButton" android:tag="binding_8" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/vlTextViewDescription" app:layout_constraintEnd_toEndOf="@id/guidelineRight" app:layout_constraintTop_toTopOf="@id/vlTextView" style="@style/EQSettingsSwitch" />
            <View android:id="@id/vlDivider" app:layout_constraintEnd_toStartOf="@id/guidelineRight" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/vlTextViewDescription" style="@style/HorizontalLine" />
            <View android:id="@id/tutorialOverlayLayout" android:background="@color/customSettingsOverlay" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <RelativeLayout android:id="@id/tooltipVolumeLevelerLayout" android:tag="binding_9" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/tooltip_padding_bottom" android:layout_marginStart="@dimen/default_app_margin" android:layout_marginEnd="@dimen/default_app_margin" app:layout_constraintBottom_toBottomOf="@id/vlTextView" app:layout_constraintStart_toStartOf="@id/vlTextView">
                <include layout="@layout/tooltip_layout_volume_leveler" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/tooltipSVLayout" android:tag="binding_10" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/tooltip_padding_bottom" android:layout_marginStart="@dimen/default_app_margin" android:layout_marginEnd="@dimen/default_app_margin" app:layout_constraintBottom_toBottomOf="@id/svTextView" app:layout_constraintStart_toStartOf="@id/svTextView">
                <include layout="@layout/tooltip_layout_sv" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/tooltipIntelligentEqLayout" android:tag="binding_11" android:paddingTop="@dimen/tooltip_padding_top" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/default_app_margin" android:layout_marginEnd="@dimen/default_app_margin" app:layout_constraintStart_toStartOf="@id/ieqText" app:layout_constraintTop_toTopOf="@id/ieqText">
                <include layout="@layout/tooltip_layout_ieq" />
            </RelativeLayout>
            <RelativeLayout android:orientation="vertical" android:id="@id/tooltipGeqLayout" android:tag="binding_12" android:paddingTop="@dimen/tooltip_padding_top" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/default_app_margin" android:layout_marginEnd="@dimen/default_app_margin" app:layout_constraintStart_toStartOf="@id/geqText" app:layout_constraintTop_toTopOf="@id/geqText">
                <include layout="@layout/tooltip_layout_graphic_eq" />
            </RelativeLayout>
            <RelativeLayout android:orientation="vertical" android:id="@id/tooltipPredefGeqLayout" android:tag="binding_13" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/default_app_margin" android:layout_marginEnd="@dimen/default_app_margin" app:layout_constraintBottom_toTopOf="@id/geqCarousel" app:layout_constraintStart_toStartOf="@id/geqText">
                <include layout="@layout/tooltip_layout_predef_eq_modes" />
            </RelativeLayout>
            <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineLeft" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/default_app_margin" />
            <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineRight" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/default_app_margin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>