<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:tag="layout/fragment_welcome_whats_new_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/main_tutorial_message_padding_lateral" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView android:id="@id/tutorial_image" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:lottie_rawRes="@raw/moto_tutorial_step1" style="@style/TutorialLottieAnimations" />
        <TextView android:textSize="@dimen/main_tutorial_title_fontsize" android:textColor="@color/activity_tutorial_text_color" android:id="@id/title" android:paddingTop="@dimen/main_tutorial_title_padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_whats_new_title" android:singleLine="false" android:fontFamily="Roboto Regular" android:paddingStart="@dimen/main_tutorial_message_padding_lateral" android:paddingEnd="@dimen/main_tutorial_message_padding_lateral" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tutorial_image" />
        <TextView android:textSize="@dimen/main_tutorial_message_fontsize" android:textColor="@color/activity_tutorial_message_color" android:id="@id/message" android:paddingTop="@dimen/main_tutorial_message_padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_whats_new_text" android:singleLine="false" android:lineSpacingExtra="5.0dip" android:fontFamily="Roboto Regular" android:paddingStart="@dimen/main_tutorial_message_padding_lateral" android:paddingEnd="@dimen/main_tutorial_message_padding_lateral" android:breakStrategy="simple" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/main_tutorial_title" />
        <android.widget.Space android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/main_tutorial_confirmation_button_fontsize" android:textColor="@color/activity_tutorial_confirmation_button_color" android:layout_gravity="end" android:id="@id/main_tutorial_button" android:tag="binding_1" android:background="@drawable/welcome_tutorial_button_bg" android:paddingTop="@dimen/main_tutorial_confirmation_button_internal_padding_top" android:paddingBottom="@dimen/main_tutorial_confirmation_button_internal_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/main_tutorial_confirmation_button_internal_padding_sides" android:text="@string/main_screen_tutorial_confirmation" android:textAllCaps="true" android:fontFamily="Roboto Regular" android:textAlignment="center" android:paddingStart="@dimen/main_tutorial_confirmation_button_internal_padding_sides" android:paddingEnd="@dimen/main_tutorial_confirmation_button_internal_padding_sides" android:layout_marginEnd="@dimen/main_tutorial_confirmation_button_internal_padding_sides" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>